Put in info/content into the divs

--- a/tholakele.html
+++ b/tholakele.html
@@ -18,22 +18,34 @@
 
     <!-- Full Name section -->
     <div class="name">
-
+        Tholakele Jiyana
     </div>
 
     <!-- Short Bio Section -->
      <div class="bio">
-
+        I am a young professinal with a background in construction.
+        i am now pursuing a career in Software Development because of my interest in the 
+        digital space. It's nerve wrecking, yet exciting at the same time. 
      </div>
 
      <!-- skills section -->
       <div class="skills">
-
+        Interpretation of drawings
+        Problem solving
+        Communication
+        Teamwork
+        Report Writing
+        Basic Programming (Html and CSS)
       </div>
 
       <!-- hobbies section  -->
        <div class="hobbies">
-        
+        Exploring restuarants
+        DIY projects
+        Travelling 
+        Listening to music and podcasts
+        Taking naps in between life
+        Self Care 
        </div>
 
 </body>
