Put skills content into bullet list

--- a/tholakele.html
+++ b/tholakele.html
@@ -30,12 +30,14 @@
 
      <!-- skills section -->
       <div class="skills">
-        Interpretation of drawings
-        Problem solving
-        Communication
-        Teamwork
-        Report Writing
-        Basic Programming (Html and CSS)
+        <ul>
+        <li>Interpretation of drawings</li>
+        <li>Problem solving</li>
+        <li>Communication</li>
+        <li>Teamwork</li>
+        <li>Report Writing</li>
+        <li>Basic Programming (Html and CSS)</li>
+        </ul>
       </div>
 
       <!-- hobbies section  -->
