Put hoobies info into bullet list

--- a/tholakele.html
+++ b/tholakele.html
@@ -42,12 +42,14 @@
 
       <!-- hobbies section  -->
        <div class="hobbies">
-        Exploring restuarants
-        DIY projects
-        Travelling 
-        Listening to music and podcasts
-        Taking naps in between life
-        Self Care 
+        <ul>
+        <li>Exploring restuarants</li>
+        <li>DIY projects</li>
+        <li>Travelling</li> 
+        <li>Listening to music and podcasts</li>
+        <li>Taking naps in between life</li>
+        <li>Self Care</li> 
+        </ul>
        </div>
 
 </body>
