Put in the subheadings

--- a/tholakele.html
+++ b/tholakele.html
@@ -23,6 +23,7 @@
 
     <!-- Short Bio Section -->
      <div class="bio">
+        Bio <br>
         I am a young professinal with a background in construction.
         i am now pursuing a career in Software Development because of my interest in the 
         digital space. It's nerve wrecking, yet exciting at the same time. 
@@ -30,6 +31,7 @@
 
      <!-- skills section -->
       <div class="skills">
+        skills
         <ul>
         <li>Interpretation of drawings</li>
         <li>Problem solving</li>
@@ -42,6 +44,7 @@
 
       <!-- hobbies section  -->
        <div class="hobbies">
+        Hobbies
         <ul>
         <li>Exploring restuarants</li>
         <li>DIY projects</li>
