Embedded the portfolio image

--- a/tholakele.html
+++ b/tholakele.html
@@ -13,7 +13,7 @@
 
 <!-- image section -->
     <div class="img">
-
+        <img src="../Port-pic.jpg" alt="Portfolio image">
     </div>
 
     <!-- Full Name section -->
@@ -25,7 +25,7 @@
      <div class="bio">
         Bio <br>
         I am a young professinal with a background in construction.
-        i am now pursuing a career in Software Development because of my interest in the 
+        I am now pursuing a career in Software Development because of my interest in the 
         digital space. It's nerve wrecking, yet exciting at the same time. 
      </div>
 
