add amkelwe's portfolio info

--- a/amkelwe.html
+++ b/amkelwe.html
@@ -10,34 +10,42 @@
     <!-- Amkelwe's portfolio -->
 
     <section>
-        <div class="name">
+        <div class=" container-name">
             <img src="amkelwe-portfolio-img.jpg"alt="portfolio-img" width="150";height="150">
             <h2>Amkelwe Lubavu</h2>
         </div>
     </section>
 
+    <section>
+        <div class="bio">
+            <h2>Bio</h2>
+            <p>Amkelwe is a software development student who aims to create practical, user-focused solutions.</p>
+          </div>
+   </section>
 
-<div class="bio">
-    <h2>Bio</h2>
-    <p></p>
-</div>
+    <section>
+        <div class="skills">
+            <h2>skills</h2>
+            <ul>
+                <li>Web development</li>
+                <li>Version Control- Git/GitHub</li>
+                <li>Data Handling</li>
+                <li>Problem Solving</li>
+            </ul>
+        </div>
+    </section>
 
-<div class="skills">
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</div>
+    <section>
+        <div class="hobbies">
+            <h2>Hobbies</h2>
+            <ul>
+                <li>Reading</li>
+                <li>Traveling</li>
+                <li>Coding Personal Projects</li>
+                <li>Experimenting with new tech or software tool</li>
+            </ul>
+        </div>
+    </section>
 
-<div class="hobbies">
- <h2>Hobbies</h2>
-
- <ul>
-    <li></li>
-    <li></li>
-</ul>
-</div>
 </body>
 </html>
