--- a/amkelwe.html
+++ b/amkelwe.html
@@ -4,47 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amkelwe-Portfolio</title>
+    <link rel="stylesheet" href="amkelwe.css">
 </head>
 <body>
 
     <!-- Amkelwe's portfolio -->
 
-    <section>
-        <div class=" container-name">
-            <img src="amkelwe-portfolio-img.jpg"alt="portfolio-img" width="150";height="150">
+    <!-- Full name -->
+     <section>
+        <div class="name">
             <h2>Amkelwe Lubavu</h2>
         </div>
-    </section>
+     </section>
 
+    <!-- about section -->
     <section>
+        <div class="img">
+            <img src="amkelwe-portfolio-img.jpg"alt="portfolio-img">
+        </div>
+     <!--Bio-->
         <div class="bio">
             <h2>Bio</h2>
-            <p>Amkelwe is a software development student who aims to create practical, user-focused solutions.</p>
-          </div>
-   </section>
-
-    <section>
+            <p> Amkelwe is a software development student with a background in travel operations that developed excellent analytical and client-service skills.<br>
+                She is eager to apply technical knowledge to real-world software projects and grow within the tech industry</p>
+        </div>
+    <!-- Skills -->
         <div class="skills">
-            <h2>skills</h2>
-            <ul>
-                <li>Web development</li>
-                <li>Version Control- Git/GitHub</li>
-                <li>Data Handling</li>
-                <li>Problem Solving</li>
-            </ul>
+            <h2>Skills</h2>
+            <p>Web development <br>
+            Version Control- Git/GitHub <br>
+            Data Handling <br>
+            Problem Solving </p>
         </div>
-    </section>
-
-    <section>
+    <!-- hobbies -->
         <div class="hobbies">
-            <h2>Hobbies</h2>
-            <ul>
-                <li>Reading</li>
-                <li>Traveling</li>
-                <li>Coding Personal Projects</li>
-                <li>Experimenting with new tech or software tool</li>
-            </ul>
-        </div>
+         <h2>Hobbies</h2>
+                <p>Reading <br>
+                Traveling <br>
+                Coding Personal Projects <br>
+                Experimenting with new tech or software tools.</p>
+            </div>
     </section>
 
 </body>
