--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 
 <body>
     <header>
-        <div class="header">
-            <div class="img">
-                <img src="./Images/a40409332b941fc27040c140b915e41c.jpg" alt="Apex Logo">
-            </div>
+                <img src="./Images/a40409332b941fc27040c140b915e41c.jpg" alt="Apex Logo" class="logo">
             <div class="title">
                 <h1>Apex Coders</h1>
             </div>
-            <div class="names">
-                    <p>Home</p>
-                    <p>Meet The Team</p>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Meet the team</a></li>
+                </ul>
+                </nav>
             </div>
         </div>
     </header>
-    <img src="./Images/IMG-20250829-WA0001.jpg" alt="Software Developer coding on multiple monitors">
-
-
-
-
+    <main>
+        <h2>Where logic meets design!</h2>
+    <section class="info">
+    <img src="./Images/IMG-20250829-WA0001.jpg" alt="Software Developer coding on multiple monitors" class="coders">
+</section>
 
 </body>
 
