--- a/Index.html
+++ b/Index.html
@@ -11,21 +11,39 @@
 <body>
     <header>
         <div class="header">
-            <div class="img">
-                <img src="./Images/a40409332b941fc27040c140b915e41c.jpg" alt="Apex Logo">
+            <div class="logo">
+                <img src="./Images/homepage/Apex logo.jpg" alt="Apex Logo">
             </div>
             <div class="title">
                 <h1>Apex Coders</h1>
             </div>
-            <div class="names">
-                    <p>Home</p>
-                    <p>Meet The Team</p>
-            </div>
         </div>
+        <nav class="menu">
+
+
+            <div class="dropdown">
+                <button class="dropbtn">Meet The Team</button>
+                <button class="dropbtn">Home</button>
+                <div class="dropdown-content">
+                    <a href="#">Amkelwe</a>
+                    <a href="#">Brendon</a>
+                    <a href="#">Bongiwe</a>
+                    <a href="#">Lesley-Eric</a>
+                    <a href="#">Lindokuhle</a>
+                </div>
+            </div>
     </header>
-    <img src="./Images/IMG-20250829-WA0001.jpg" alt="Software Developer coding on multiple monitors">
+    <main>
+        <h2>Where logic meets design!</h2>
+        <h2>Coding the Future,One Project at a Time.</h2>
+        <section class="info">
+            <img src="./Images/homepage/homepage background.jpg" alt="Coding on setup" class="coders">
 
 
+
+        </section>
+
+    </main>
 
 
 
