--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
                     <a href="#">Brendon</a>
                     <a href="#">Bongiwe</a>
                     <a href="#">Lesley-Eric</a>
-                    <a href="#">Lindokuhle</a>
+                    <a href="#">Tholakele</a>
                 </div>
             </div>
     </header>
@@ -48,5 +48,6 @@
 
 
 </body>
+
 
 </html>
