finished portfolio designs

--- a/Brendon.html
+++ b/Brendon.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bongiwe</title>
+    <title>Brendon-Portfolio</title>
     <link rel="stylesheet" href="style3.css" />
     <link
       rel="stylesheet"
@@ -11,23 +11,23 @@
     />
   </head>
   <body>
-    <!--Bongiwe's Portfolio  -->
+    <!--Brendon's Portfolio  -->
 
     <!-- Full name -->
-    <div class="name">Bongiwe Dube</div>
+    <div class="name">Brendon Maungwe</div>
 
     <div class="intro">
       <!-- A photo -->
       <div class="img">
-        <img src="images/IMG_1104.jpg" alt="Bongiwe" />
+        <img src="Brendon-img/Brendon.jpg" alt="Brendon" />
         <div class="icons">
-          <a href="http://linkedin.com/in/bongiwe-dube-99a740178">
+          <a href="https://www.linkedin.com/in/brendon-maungwe-0296b5355/">
             <i
               class="fa-brands fa-linkedin fa-2x"
               style="color: #f7e4c3; margin-right: 10px"
             ></i>
           </a>
-          <a href="https://github.com/Bongiwe-pana">
+          <a href="https://github.com/Brendon-btd">
             <i class="fa-brands fa-github fa-2x" style="color: #f7e4c3"></i>
           </a>
         </div>
@@ -37,8 +37,12 @@
       <div class="bio">
         <li>Short Bio</li>
         <p>
-          Bongiwe Dube is a junior software developer, who is passionate about
-          solving coding challenges.
+          Hi, I’m Brendon a software engineering student at Melsoft Academy with
+          a passion for technology, problem-solving, and building creative
+          solutions through code. <br />
+          I’m currently developing my skills in software development, learning
+          to design efficient systems, and exploring how technology can make an
+          impact in the real world.
         </p>
       </div>
     </div>
@@ -48,38 +52,50 @@
       <div class="skills">
         <h2>Skills</h2>
         <ul>
-          HTML,CSS and basic web development
+          Creative Thinking
         </ul>
         <ul>
-          Development tools knowledge (VSCode)
+          HTML
         </ul>
         <ul>
-          Git/Github
+          SEO certified
         </ul>
         <ul>
-          Attention to detail
+          Editing
         </ul>
         <ul>
-          Communication
+          Team Player
         </ul>
         <ul>
           CSS
         </ul>
         <ul>
-          Collaboration and team work
+          N8N-automation
         </ul>
       </div>
       <!-- hobbies -->
       <div class="hobbies">
         <h2>Hobbies</h2>
         <ul>
-          Reading
+          Basketball
+        </ul>
+        <ul>
+          Coding
+        </ul>
+        <ul>
+          Travelling The World
+        </ul>
+        <ul>
+          Gaming
         </ul>
         <ul>
           Cooking
         </ul>
         <ul>
-          Swimming
+          Filming Content
+        </ul>
+        <ul>
+          Golf
         </ul>
       </div>
     </div>
