--- a/Lesley.html
+++ b/Lesley.html
@@ -1,39 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Member</title>
-</head>
-<body>
-<h1>Team Memeber</h1>
-<div class="img">
-<img src="./Images/IMG-20230818-WA0050.jpg" alt="Picture Of The Team Memeber">
-</div>
-<div class="name">
-<h2>Lesley-Eric</h2>
-</div>
-<div class="Bio">
-<h3>Short Bio</h3>
-<p>I'm an aspiring Software Engineer, who is currently enrolled at Melsoft Academy where i am learning to create digital solutions through programming, that can help individuals or businesses thrive.Each Module and lesson i have covered through this course has helped me get a step close to my goal of becoming a Software Engineer.</p>
-</div>
-<div class="Skills">
-<h3>Skills</h3>
-<ul>
-    <li>Coding</il>
-   <li>Problem Solving</li>
-   <li>AI</li>
-    </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lesley-Eric</title>
+    <link rel="stylesheet" href="style3.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <!--Lesley-Eric's Portfolio  -->
+
+    <!-- Full name -->
+    <div class="name">Lesley-Eric</div>
+
+    <div class="intro">
+      <!-- A photo -->
+      <div class="img">
+        <img src="images/les_profile.jpg" alt="Lesley-Eric" />
+        <div class="icons">
+          <a
+            href="https://www.linkedin.com/in/lesley-eric-m-408319372?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+          >
+            <i
+              class="fa-brands fa-linkedin fa-2x"
+              style="color: #f7e4c3; margin-right: 10px"
+            ></i>
+          </a>
+          <a href="https://github.com/LesMrCode">
+            <i class="fa-brands fa-github fa-2x" style="color: #f7e4c3"></i>
+          </a>
+        </div>
+      </div>
+
+      <!-- Bio -->
+      <div class="bio">
+        <li>Short Bio</li>
+        <p>
+          I'm an aspiring Software Engineer, who is currently enrolled at
+          Melsoft Academy where i am learning to create digital solutions
+          through programming, that can help individuals or businesses thrive.
+          <br />Each Module and lesson i have covered through this course has
+          helped me get a step close to my goal of becoming a Software Engineer.
+        </p>
+      </div>
     </div>
-<div class="hobbies">
-<h3>Hobbies</h3>
-<ul>
-<li>Reading</li>
-<li>Gym</li>
-<li>Cycling</li>
-<li>Hiking</li>
-<li>Sim Racing</li>
-</ul>
-</div>
-</body>
+
+    <div class="exp">
+      <!-- Skills -->
+      <div class="skills">
+        <h2>Skills</h2>
+        <ul>
+          Coding
+        </ul>
+        <ul>
+          Problem Solving
+        </ul>
+        <ul>
+          AI
+        </ul>
+      </div>
+      <!-- hobbies -->
+      <div class="hobbies">
+        <h2>Hobbies</h2>
+        <ul>
+          Reading
+        </ul>
+        <ul>
+          Gym
+        </ul>
+        <ul>
+          Cycling
+        </ul>
+        <ul>
+          Hiking
+        </ul>
+        <ul>
+          Sim Racing
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
