--- a/Tholakele.html
+++ b/Tholakele.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bongiwe</title>
+    <title>Thola-portfolio</title>
     <link rel="stylesheet" href="style3.css" />
     <link
       rel="stylesheet"
@@ -11,23 +11,25 @@
     />
   </head>
   <body>
-    <!--Bongiwe's Portfolio  -->
+    <!--Thola's Portfolio  -->
 
     <!-- Full name -->
-    <div class="name">Bongiwe Dube</div>
+    <div class="name">Tholakele Jiyana</div>
 
     <div class="intro">
       <!-- A photo -->
       <div class="img">
-        <img src="images/IMG_1104.jpg" alt="Bongiwe" />
+        <img src="images/Thola.jpg" alt="Thola" />
         <div class="icons">
-          <a href="http://linkedin.com/in/bongiwe-dube-99a740178">
+          <a
+            href="https://www.linkedin.com/in/lindokuhle-tholakele-jiyana-7371b394?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+          >
             <i
               class="fa-brands fa-linkedin fa-2x"
               style="color: #f7e4c3; margin-right: 10px"
             ></i>
           </a>
-          <a href="https://github.com/Bongiwe-pana">
+          <a href="https://github.com/Tholakele-jiyana">
             <i class="fa-brands fa-github fa-2x" style="color: #f7e4c3"></i>
           </a>
         </div>
@@ -37,8 +39,9 @@
       <div class="bio">
         <li>Short Bio</li>
         <p>
-          Bongiwe Dube is a junior software developer, who is passionate about
-          solving coding challenges.
+          I am a young professinal with a background in construction. I am now
+          pursuing a career in Software Development because of my interest in
+          the digital space. It's nerve wrecking, yet exciting at the same time.
         </p>
       </div>
     </div>
@@ -48,38 +51,41 @@
       <div class="skills">
         <h2>Skills</h2>
         <ul>
-          HTML,CSS and basic web development
+          Interpretation of drawings
         </ul>
         <ul>
-          Development tools knowledge (VSCode)
+          Problem solving
         </ul>
         <ul>
-          Git/Github
+          Teamwork
         </ul>
         <ul>
-          Attention to detail
+          Report Writing
         </ul>
         <ul>
-          Communication
-        </ul>
-        <ul>
-          CSS
-        </ul>
-        <ul>
-          Collaboration and team work
+          Basic Programming (Html and CSS)
         </ul>
       </div>
       <!-- hobbies -->
       <div class="hobbies">
         <h2>Hobbies</h2>
         <ul>
-          Reading
+          Exploring restuarants
         </ul>
         <ul>
-          Cooking
+          DIY projects
         </ul>
         <ul>
-          Swimming
+          Travelling
+        </ul>
+        <ul>
+          Listening to music and podcasts
+        </ul>
+        <ul>
+          Taking naps in between life
+        </ul>
+        <ul>
+          Self Care
         </ul>
       </div>
     </div>
