--- a/amkelwe.html
+++ b/amkelwe.html
@@ -1,50 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amkelwe-Portfolio</title>
-    <link rel="stylesheet" href="amkelwe.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style3.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <!-- Amkelwe's portfolio -->
 
     <!-- Full name -->
-     <section>
-        <div class="name">
-            <h2>Amkelwe Lubavu</h2>
-        </div>
-     </section>
 
-    <!-- about section -->
-    <section>
-        <div class="img">
-            <img src="amkelwe-portfolio-img.jpg"alt="portfolio-img">
-        </div>
-     <!--Bio-->
-        <div class="bio">
-            <h2>Bio</h2>
-            <p> Amkelwe is a software development student with a background in travel operations that developed excellent analytical and client-service skills.<br>
-                She is eager to apply technical knowledge to real-world software projects and grow within the tech industry</p>
-        </div>
-    <!-- Skills -->
-        <div class="skills">
-            <h2>Skills</h2>
-            <p>Web development <br>
-            Version Control- Git/GitHub <br>
-            Data Handling <br>
-            Problem Solving </p>
-        </div>
-    <!-- hobbies -->
-        <div class="hobbies">
-         <h2>Hobbies</h2>
-                <p>Reading <br>
-                Traveling <br>
-                Coding Personal Projects <br>
-                Experimenting with new tech or software tools.</p>
-            </div>
-    </section>
+    <div class="name">
+      <h2>Amkelwe Lubavu</h2>
+    </div>
 
-</body>
+    <div class="intro">
+      <!-- about section -->
+
+      <div class="img">
+        <img src="amkelwe-portfolio-img.jpg" alt="portfolio-img" />
+        <div class="icons">
+          <a
+            href="https://www.linkedin.com/in/amkelwe-lubavu-815086237?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+          >
+            <i
+              class="fa-brands fa-linkedin fa-2x"
+              style="color: #f7e4c3; margin-right: 10px"
+            ></i>
+          </a>
+          <a href="https://github.com/Amke0501">
+            <i class="fa-brands fa-github fa-2x" style="color: #f7e4c3"></i>
+          </a>
+        </div>
+      </div>
+      <!--Bio-->
+      <div class="bio">
+        <li>Bio</li>
+        <p>
+          Amkelwe is a software development student with a background in travel
+          operations that developed excellent analytical and client-service
+          skills.<br />
+          She is eager to apply technical knowledge to real-world software
+          projects and grow within the tech industry
+        </p>
+      </div>
+    </div>
+
+    <div class="exp">
+      <!-- Skills -->
+      <div class="skills">
+        <h2>Skills</h2>
+        <ul>
+          Web development
+        </ul>
+        <ul>
+          Version Control- Git/GitHub
+        </ul>
+        <ul>
+          Data Handling
+        </ul>
+        <ul>
+          Problem Solving
+        </ul>
+      </div>
+      <!-- hobbies -->
+      <div class="hobbies">
+        <h2>Hobbies</h2>
+        <ul>
+          Reading
+        </ul>
+        <ul>
+          Traveling
+        </ul>
+        <ul>
+          Coding Personal Projects
+        </ul>
+        <ul>
+          Experimenting with new tech or software tools
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
