--- a/Lesley.html
+++ b/Lesley.html
@@ -11,6 +11,29 @@
     />
   </head>
   <body>
+     <header>
+        <div class="header">
+            <div class="title">
+                <h1>Apex Coders</h1>
+            </div>
+
+             <nav class="menu">
+
+              <a href="Index.html"><button class="home-btn">Home</button></a>
+
+            <div class="dropdown">
+                <button class="dropbtn">Meet The Team</button>
+                <div class="dropdown-content">
+                    <a href="amkelwe.html">Amkelwe</a>
+                    <a href="Brendon.html">Brendon</a>
+                    <a href="Bongiwe.html">Bongiwe</a>
+                    <a href="Lesley.html">Lesley-Eric</a>
+                    <a href="Tholakele.html">Tholakele</a>
+                </div>
+            </div>
+        </div>
+       
+    </header>
     <!--Lesley-Eric's Portfolio  -->
 
     <!-- Full name -->
